docs: add description button

--- a/src/components/Button/Intro.mdx
+++ b/src/components/Button/Intro.mdx
@@ -5,7 +5,7 @@ import * as Story from "./Button.stories.tsx";
 <Meta of={Story}/>
 
 # Botão
-Componente de botão usado para disparar ações.
+O componente de botão é um elemento fundamental da interface do usuário, presente em aplicações e websites para permitir a interação dos usuários com o sistema. Ele é representado graficamente por uma área retangular que pode conter texto, ícones ou ambos, e é projetado para responder ao clique do usuário.
 
 ## Pequeno
 <Canvas of={Story.Small}/>
@@ -15,6 +15,9 @@ Componente de botão usado para disparar ações.
  
 ## Grande
 <Canvas of={Story.Large}/>
+
+## Carregando
+<Canvas of={Story.Loading}/>
 
 ## Documentação interativa
 <Primary/>
