refactor: change component name Error to ErrorPage

--- a/src/components/ErrorPage/Intro.mdx
+++ b/src/components/ErrorPage/Intro.mdx
@@ -1,6 +1,6 @@
 import { Meta, Controls , Primary, Canvas} from "@storybook/blocks";
 
-import * as Story from "./Error.stories.tsx";
+import * as Story from "./ErrorPage.stories.tsx";
 
 <Meta of={Story}/>
 
