doc: dependencies storybook

--- a/src/components/Button/Intro.mdx
+++ b/src/components/Button/Intro.mdx
@@ -19,6 +19,9 @@ O componente de botão é um elemento fundamental da interface do usuário, pres
 ## Carregando
 <Canvas of={Story.Loading}/>
 
+## Cancelar
+<Canvas of={Story.Canceled}/>
+
 ## Documentação interativa
 <Primary/>
 <Controls/>
